fix missing quote

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
-  "@type": "MusicGroup,
+  "@type": "MusicGroup",
   "url": "http://www.kernramble.com"
 }
 </script>
