update layouts to match new version of hugo

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,4 @@
-{{ partial "header.html" . }}
-
-
+{{ define "content" }}
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
@@ -28,9 +26,4 @@
 
   </div>
 
-   
-
-
-{{ partial "footer.html" }}
-
-
+  {{ end }}
