--- a/layouts/youtube/summary.html
+++ b/layouts/youtube/summary.html
@@ -1,3 +1,4 @@
+{{ define "content" }}
 <section id="main">
 <div>
 <h1 id="title">{{ .Title }}</h1>
@@ -6,5 +7,5 @@
 {{ end }}
 </div>
 </section>
-
+{{ end }}
 
