--- a/layouts/catalog/list.html
+++ b/layouts/catalog/list.html
@@ -9,6 +9,7 @@
       <th>Album</th>
       <th>Composer(s)</th>
       <th>Year</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +19,8 @@
       <td>{{ .Params.Album }}</td>
       <td>{{ .Params.Composer }}</td>
       <td>{{ .Params.Year }}</td>
+      <td>{{ if .Params.Recordings }}&#10004;{{ end }}
+      </td>
     </tr>
   {{ end }}
   </tbody>
