--- a/layouts/catalog/list.html
+++ b/layouts/catalog/list.html
@@ -41,6 +41,7 @@ th {
 <table class="table table-striped table-bordered table-sm">
   <thead>
     <tr>
+      <th></th>
       <th>Name</th>
       <th>Album</th>
       <th>Written</th>
@@ -52,6 +53,9 @@ th {
   {{ range .Data.Pages.ByTitle }}
      {{ $.Scratch.Set "counter" (add ($.Scratch.Get "counter") 1) }}
     <tr data-number="{{$.Scratch.Get "counter"}}">
+      <td>
+        {{ if not .Params.Ignore }}*{{ end }}
+      </td>
       <td><a href="{{ .Permalink }}">{{ .Params.Name }}</a></td>
       <td>{{ .Params.Album }}</td>
       <td>{{ .Params.Year }}</td>
