--- a/layouts/partials/recording.html
+++ b/layouts/partials/recording.html
@@ -1,6 +1,8 @@
 {{ if eq .source "youtube" }}
 
+ <div>
  <iframe width="320" height="240" src="https://www.youtube.com/embed/{{ .id }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ </div>
 
 {{ else if eq .source "soundcloud" }}
 
@@ -8,10 +10,10 @@
        
 {{ else if eq .source "walterklang" }}
  <div>
- <audio controls>
-   <source src="{{ .id }}" type="audio/mpeg">
-   <a href="{{ .id }}">{{ .id }}</a>
- </audio>
+   <audio controls>
+     <source src="{{ .id }}" type="audio/mpeg">
+     <a href="{{ .id }}">{{ .id }}</a>
+   </audio>
  </div>
 
 {{ else }}
