--- a/layouts/catalog/list.html
+++ b/layouts/catalog/list.html
@@ -37,6 +37,7 @@ th {
 
 <h2>Songs</h2>
 <div>Total Count: {{ len .Data.Pages }}</div>
+{{ $recordings := slice }}
 
 <table class="table table-striped table-bordered table-sm">
   <thead>
@@ -65,12 +66,15 @@ th {
           {{ range first 1 $sorted }}
             {{ .year }}
           {{ end }}
+          {{ $recordings = $recordings | append . }}
       {{ end }}
       </td>
     </tr>
   {{ end }}
   </tbody>
 </table>
+
+<div>Total Recordings: {{ len $recordings }}</div>
 
 {{ end }} 
 
