--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
     <meta http-equiv="Expires" content="0"/>
     <meta http-equiv="Last-modified" content="0"/>
     <meta http-equiv="Cache-control" content="no-cache, must-revalidate"/>
