--- a/layouts/partials/recording.html
+++ b/layouts/partials/recording.html
@@ -6,8 +6,8 @@
 
 {{ else if eq .source "soundcloud" }}
 
- <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ .id }}&color=%23ff5500&inverse=false&auto_play=false&show_user=true"></iframe>
-       
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ .id }}&color=%23ff5500&inverse=false&auto_play=false&show_user=true&show_comments=false&show_reposts=false&show_teaser=true"></iframe>
+
 {{ else if eq .source "walterklang" }}
  <div>
    <audio controls>
