--- a/layouts/catalog/single.html
+++ b/layouts/catalog/single.html
@@ -2,7 +2,7 @@
 
 <h2>{{ .Params.Name }}</h2>
 
-<table class="table table-striped table-bordered table-sm">
+<table class="table table-striped table-bordered table-sm max-w-full">
   <tbody>
     <tr>
         <th>Name</th>
