--- a/layouts/catalog/list.html
+++ b/layouts/catalog/list.html
@@ -39,7 +39,7 @@ th {
 <div>Total Count: {{ len .Data.Pages }}</div>
 {{ $recordings := slice }}
 
-<table class="table table-striped table-bordered table-sm">
+<table class="table table-striped table-bordered table-sm max-w-full">
   <thead>
     <tr>
       <th></th>
