--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,22 +15,29 @@
     <link href="/css/style.css" rel="stylesheet" type="text/css" media="screen" />
  
     <title>{{ .Title }}</title>
-
   </head>
-  <body>
-
+  
+ <body class="bg-sky-100/10">
   <div class="md:container md:mx-auto px-4">
-    <div id="header" class="flex pb-4">
-
-    <div class="flex-row">
-      <h1 id="logo">
-        <!-- kern logo -->
-        <a href="/">
-          <img alt="Kern Ramble logo image" src="/images/kern-logo.gif" border="0">
-        </a>
-        <!-- end kern logo -->
+    <div id="header" class="flex pb-4 bg-blue-100 bg-opacity-50">
+     <h1 id="logo" class="flex-auto">
+        <div class="justify-center sm:px-12">
+           <a href="/">
+              <img class="p-1" src="/images/kern-ramble-text-small.png" alt="Kern Ramble log" />
+           </a>
+        </div>
       </h1>
-    </div>
+
+     <nav class="flex-auto">
+      <ul class="flex flex-row space-x-4">
+        <li class="flex-1 p-4">
+           <a href="/contact">Contact</a>
+        </li>
+        <li class="flex-1 p-4">
+           <a href="/events">Events</a>
+        </li>
+      </ul>
+    </nav>
 
   </div>
 
