update look a bit

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,12 +18,12 @@
   </head>
   
  <body class="bg-sky-100/10">
-  <div class="md:container md:mx-auto px-4">
+  <div id="container" class="md:container md:mx-auto px-4">
     <div id="header" class="flex pb-4 bg-blue-100 bg-opacity-50">
      <h1 id="logo" class="flex-auto">
         <div class="justify-center sm:px-12">
            <a href="/">
-              <img class="p-1" src="/images/kern-ramble-text-small.png" alt="Kern Ramble log" />
+              <img class="p-1" src="/images/kern-ramble-text-sketch-small.png" alt="Kern Ramble log" />
            </a>
         </div>
       </h1>
