--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,24 +3,11 @@ html {
   font-feature-settings: normal;
 }
 
-/* body { background-color:#DCDCDC; }*/
-#header {
-   position:relative;
+body { 
+  background-image: url(../images/swirls-smaller.png);
+  background-repeat: repeat;
+  background-size: contain;
 }
-#header::after {
-  content: "";
-  background: url(images/flowers_on_hill.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;  
-}
- 
 
 h1 { font-size: 135%; font-weight: bold; }
 h2 { font-size: 125%; font-weight: bold; }
@@ -28,8 +15,6 @@ h3 { font-size: 115%; font-weight: bold; }
 h4 { font-size: 105%; font-weight: bold; }
 h5 { font-size: 100%; font-weight: bold; }
 
-
-/* .list-group-item { background-color: #DCDCDC;}*/
 
 p {
   margin-top: 1em;
