make logo with larger (for small screens)

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,7 @@
      <h1 id="logo" class="flex-auto">
         <div class="justify-center sm:px-12">
            <a href="/">
-              <img class="p-1" src="/images/kern-ramble-text-sketch-small.png" alt="Kern Ramble log" />
+              <img class="p-1 max-w-[125%]" src="/images/kern-ramble-text-sketch-small.png" alt="Kern Ramble log" />
            </a>
         </div>
       </h1>
