add links to bandcamp sample music

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,7 @@
      <h1 id="logo" class="flex-auto">
         <div class="justify-center sm:px-12">
            <a href="/">
-              <img class="p-1 max-w-[125%]" src="/images/kern-ramble-text-sketch-small.png" alt="Kern Ramble log" />
+              <img class="p-1 max-w-[105%] lg:h-80" src="/images/kern-ramble-text-sketch-small.png" alt="Kern Ramble log" />
            </a>
         </div>
       </h1>
@@ -35,6 +35,9 @@
         </li>
         <li class="flex-1 p-4">
            <a href="/events">Events</a>
+        </li>
+        <li class="flex-1 p-4">
+          <a href="#sample">Music</a>
         </li>
       </ul>
     </nav>
