more sample music

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
            <a href="/events">Events</a>
         </li>
         <li class="flex-1 p-4">
-          <a href="#sample">Music</a>
+          <a href="/#sample">Music</a>
         </li>
       </ul>
     </nav>
