make smaller size images

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,7 +24,7 @@
         <div class="justify-center sm:px-12">
            <a href="/">
              <!-- <img class="p-1 max-w-[105%] lg:h-80" src="/images/kern-ramble-text-sketch-small.png" alt="Kern Ramble log" /> -->
-             <img class="p-1 max-w-[105%] lg:h-80" src="/images/new-name.png" alt="Kern Ramble log" />
+             <img class="p-1 max-w-[105%] lg:h-80" src="/images/new-name-smaller.png" alt="Kern Ramble logo" />
 
 
            </a>
