--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body { 
   /* background-image: url(../images/swirls-smaller.png);*/
-  background-image: url(../images/landscape.jpg);
+  background-image: url(../images/landscape_smaller.jpg);
   /* background-repeat: repeat;*/
   background-repeat: no-repeat;
  /* background-size: contain;*/
